# xiaomei-brain

./: .dockerignore  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  and_neuron_weights.json  claude-project.lnk  config.example.json  docker-compose.yml  pyproject.toml  xiaomei
agents/: .deprecated
bak/: __main__.py  agent.py  agent_manager.py  config.example.yaml.bak  config.yaml.bak  context_assembler.py  gateway_rpc_server.py.bak  proactive.py  scheduler.py  session.py
docs/: ARCHITECTURE.md  CHANNEL_DESIGN.md  CONFIG.md  Channel使用指南.md  IDENTITY.md  Metacognition层设计补充.md  PACE-完善设计-v0.2.md  PACE-技术介绍-v0.2.md  PACE-技术介绍.md  PLUGIN.md  SUMMARY.md  comment-style-guide.md  desktop-agent-development-conversation.md  desktop-windows-packaging.md  emotion-memory-layer-design.md  innervoice集成.md  memory-system-upgrade-design-xiaomei-design.md  memory-system-upgrade-design.md  phase1-verification.md  procedural-memory.md  tutorial-today.md  为什么感觉现在AI Agent都是雷声大雨点小？.md  大脑架构_BASAL_GANGLIA层设计.md  大脑架构_MEMORY层设计.md  大脑架构_WORKSPACE层设计.md  大脑架构_完整流程.md  大脑架构_完整蓝图.md  大脑架构_经验系统优化设计.md  对话记录_2026-04-16_chat-abort历史实现.md  对话记录_2026-04-16_大脑架构设计.md  工具Provider插件化设计.md  开发日志_2026-04-14.md  开源可用化路线设计_2026-06-21.md  技术文档_配置文件系统_v1.md  提示词测试_身体感受与目标渲染.md  提示词测试_躯体标记.md  插件开发指南.md  渠道配置指南.md  统一启动架构.md  能动性设计方案.md  (+4 more)
docs-local/: Channel开发计划.md  Channel架构设计文档.md  Config热重载设计.md  Desk机制设计.md  Feishu Streaming实现总结.md  GATEWAY_INTEGRATION_DISCUSSION.md  GATEWAY_METHODS_STATUS.md  IDENTITY.md  ONNX模型导出与推理实践.md  OPENCLAW_GATEWAY_INTEGRATION.md  OpenClaw_TUI源码分析报告.md  PACE-design.md  Phase2-实时表情监控-ExpressionMonitor.md  Phase2-面部情绪感知闭环.md  README.md  SelfImage数据汇聚审计.md  TaskSession设计.md  V3渲染_记忆拆分与Section注册表.md  Windows平台兼容开发记录.md  comment-style-guide-zh.md  minimax.md  procedural-memory-design.md  start_all.md  三层技术栈商业应用方向设计.md  上下文模式判断设计.md  主循环重构_行为选择器.md  后续完善计划.md  启动及使用.md  大脑架构_DRIVE层设计.md  大脑架构_METACOGNITION层设计.md  大脑架构_METACOGNITION层重新设计.md  大脑架构_PURPOSE层设计.md  大脑架构_主动学习机制.md  大脑架构_多对话并发与意识层次设计.md  大脑架构_统一任务执行模型设计.md  大脑架构_运行流程集成.md  对话记录_0413-0414.md  对话记录_2026-04-13.md  嵌入自监督_变化检测设计.md  意识层代码流程梳理_2026-04-25.md  (+9 more)
examples/: ai_news.txt  alien_terminal.py  basic_agent.py  channel_demo.py  complete_L2_prompts_actual.txt  feishu_demo.py  feishu_streaming_demo.py  feishu_with_agent_demo.py  hello_world.py  iran_news.txt  libai.txt  multi_channel_demo.py  run_conscious_living.py  run_conscious_living_ptk.py  run_conscious_living_tui.py  run_unconscious.py  simplest_nn.py  simplest_nn_torch.py  start_all.py  test_action_executor.py  test_associative_chain.py  test_broaden.py  test_conscious_living.py  test_conscious_living_e2e.py  test_e2e_complex_task.py  test_feishu_channel.py  test_goal_loop.py  test_inner_perception.py  test_l4.py  test_learning_queue.py  test_mem_fast.py  test_memory_system.py  test_pace_mode.py  test_perspective_breakthrough.py  test_phase2_dynamic_goal_tree.py  test_pmm_complex.py  test_result.txt  test_sleeping_learn.py  test_task_system.py  test_task_v2_integration.py  (+15 more)
scripts/: conversation_viewer.py  embedding_server.py  extract_conversation.py  extract_conversations.py  extract_daily_conversations.py  migrate_internal_to_narratives.py  migrate_to_experience_stream.py  seed_memories.py  voxcpm_server.py
tests/: __init__.py  conftest.py  hello.py  test_action_executor.py  test_action_item.py  test_agent.py  test_agent_message_utils.py  test_agent_registry.py  test_anthropic_transport.py  test_body.py  test_cli_lifecycle.py  test_command_handler.py  test_comms_routing.py  test_consciousness.py  (+59 more)
(+756 files in other folders)
