[project]
name = "xiaomei-brain"
version = "0.2.0"
description = "A general-purpose AI Agent framework with Volcengine support"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "sentence-transformers>=2.2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
tts = [
    "sounddevice>=0.4.0",
    "numpy>=1.24.0",
]
websocket = [
    "fastapi>=0.109.0",
    "websockets>=12.0",
    "uvicorn[standard]>=0.27.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/xiaomei_brain"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
