[project]
name = "xiaomei-brain"
version = "0.2.0"
description = "A multi-agent AI framework with consciousness, drive, purpose, and metacognition"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "sentence-transformers>=2.2.0",
    "pyyaml>=6.0",
    "lancedb",
]

[project.optional-dependencies]
feishu = ["lark-oapi"]
dingtalk = ["dingtalk-stream"]
tts = [
    "sounddevice>=0.4.0",
    "numpy>=1.24.0",
]
server = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
]
tui = ["textual"]
schedule = ["croniter"]
dev = [
    "pytest>=8.0",
    "jsonschema",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/xiaomei_brain"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
